# gimbal_sim_gazebo

./: .gitignore  README.md  model.config  model.sdf
set_vel_plugin/: CMakeLists.txt
set_vel_plugin/src/: GimbalControlPlugin.cpp
